--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build",  
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "autoprefixer": "^10.4.21",
     "next": "15.2.2",
     "phosphor-react": "^1.4.1",
     "radix-ui": "^1.1.3",
